# Luminara-Zoo-OzZoo-Simulation-Game-Requirements-

./: LICENSE  README.md
Luminara Zoo- ozzoo-simulation/: README.md  main.py  pyproject.toml  requirements-ai.txt  requirements-hermes.txt  requirements-rich.txt  requirements.txt
Luminara Zoo- ozzoo-simulation/animals/: __init__.py  animal.py  bird.py  canid.py  factory.py  interfaces.py  marsupial.py  reptile.py
Luminara Zoo- ozzoo-simulation/hermes_integration/: __init__.py  skill.py
Luminara Zoo- ozzoo-simulation/systems/: __init__.py  ai_advisor.py  alert_observer.py  award_ledger.py  event_bus.py  exceptions.py  food_item.py  food_store.py  medicine.py  medicine_store.py  special_events.py  treasury.py
Luminara Zoo- ozzoo-simulation/ui/: __init__.py  cli.py
Luminara Zoo- ozzoo-simulation/zoo/: __init__.py  enclosure.py  habitat.py  scenario.py  visitor.py  zoo.py
OzZoo (beta) OOP project/ozzoo/: CURSOR_MASTER_PROMPT.md  main.py  test_game.py
OzZoo (beta) OOP project/ozzoo/animals/: __init__.py  base.py
OzZoo (beta) OOP project/ozzoo/hermes_integration/: skill.py
OzZoo (beta) OOP project/ozzoo/systems/: __init__.py  exceptions.py  patterns.py
OzZoo (beta) OOP project/ozzoo/ui/: cli.py
OzZoo (beta) OOP project/ozzoo/zoo/: __init__.py  entities.py
